--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ Online Shopping site in India: Shop Online for Mobiles, Books, Watches,
 Shoes and More - Amazon.in
 </title>
 <link class=edges-curve rel=icon href=img/favicon.png type=image/x-icon />
-<link rel=stylesheet href=css/style.css />
-<link rel=stylesheet href=css/utlis.css />
+<link rel=stylesheet href=css/compressed/style-min.css />
+<link rel=stylesheet href=css/compressed/utlis-min.css />
 </head>
 <body>
 <header>
