--- a/index.html
+++ b/index.html
@@ -1,239 +1,284 @@
 <!DOCTYPE html>
-<html lang=en>
-<head>
-<meta charset=UTF-8 />
-<meta http-equiv=X-UA-Compatible content="IE=edge" />
-<meta name=viewport content="width=device-width, initial-scale=1.0" />
-<title>
-Online Shopping site in India: Shop Online for Mobiles, Books, Watches,
-Shoes and More - Amazon.in
-</title>
-<link class=edges-curve rel=icon href=img/favicon.png type=image/x-icon />
-<link rel=stylesheet href=css/compressed/style-min.css />
-<link rel=stylesheet href=css/compressed/utlis-min.css />
-</head>
-<body>
-<header>
-<div class=nav1>
-<div class=nav1left>
-<img class=logo src=/img/logo2.jpg alt />
-<div class=address>
-<img class=location src=/img/location1.jpg alt />
-<p class=nav1-text-style>
-Hello <br />
-<b>Select your address</b>
-</p>
-</div>
-</div>
-<div class=nav1center>
-<input class=searchbar type=text placeholder="Search Items" />
-<img class=searchicon src=/img/search1.jpg alt />
-</div>
-<div class=nav1right>
-<img class=flag src=/img/flag.png alt />
-<div class="SignIn nav1-text-style">
-Hello, Sign in <br /><b>Accounts and Lists</b>
-</div>
-<p class="Returns nav1-text-style">Returns and Orders</p>
-<img class=cart src=/img/cart.jpg alt />
-</div>
-</div>
-<div class=nav2>
-<div class=nav2left>
-<div class=nav2lefta>
-<div class=nav2-left-style>All</div>
-<div class=nav2-left-style>Gift Cards</div>
-<div class=nav2-left-style>Mobiles</div>
-<div class=nav2-left-style>Bestsellers</div>
-<div class=nav2-left-style>Electronics</div>
-</div>
-<div class=nav2leftb>
-<div class=nav2-left-style>Customer Service</div>
-<div class=nav2-left-style>Fashion</div>
-<div class=nav2-left-style>Prime</div>
-<div class=nav2-left-style>Home and Kitchen</div>
-<div class=nav2-left-style>Today's Deal</div>
-</div>
-</div>
-</div>
-</header>
-<main>
-<div>
-<img class=main-img src=https://source.unsplash.com/1600x500/?shopping-clothes alt />
-</div>
-<div class=card-holder>
-<div class=card>
-<h3 class=card-head>Revamp your home style</h3>
-<div class=cards>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?bed-sheets alt width=120vw height=80vh />
-<div class=lines>Bed sheets</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?curtains alt width=120vw height=80vh />
-<div class=lines>Curtains</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?lamps alt width=120vw height=80vh />
-<div class=lines>Lamps</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/Home-decors alt width=120vw height=80vh />
-<div class=lines>Home Decor</div>
-</div>
-</div>
-</div>
-<div class=card>
-<h3 class=card-head>Men's Clothing</h3>
-<div class=cards>
-<div class=card-items>
-<img src="https://source.unsplash.com/1600x500/?men's-clothing" alt width=120vw height=80vh />
-<div class=lines>Clothing</div>
-</div>
-<div class=card-items>
-<img src="https://source.unsplash.com/1600x500/?men's-footwear" alt width=120vw height=80vh />
-<div class=lines>Footwear</div>
-</div>
-<div class=card-items>
-<img src="https://source.unsplash.com/1600x500/?Men's-wathches" alt width=120vw height=80vh />
-<div class=lines>Wathes</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Bags-Luggages alt width=120vw height=80vh />
-<div class=lines>Bags and Luggages</div>
-</div>
-</div>
-</div>
-<div class=card>
-<h3 class=card-head>Automative Essentials</h3>
-<div class=cards>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?washing-machines alt width=120vw height=80vh />
-<div class=lines>Washing Machines</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Dishwasher alt width=120vw height=80vh />
-<div class=lines>Dishwasher</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Vaccuum-cleaner alt width=120vw height=80vh />
-<div class=lines>Vaccuum-cleaner</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?grinders alt width=120vw height=80vh />
-<div class=lines>Grinders</div>
-</div>
-</div>
-</div>
-<div class=card>
-<h3 class=card-head>Bill Payments </h3>
-<div class=cards>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?prepaid-recharge alt width=120vw height=80vh />
-<div class=lines>Prepaid Recharge</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Electricity-bills alt width=120vw height=80vh />
-<div class=lines>?Electricity bills</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?DTH-recharge alt width=120vw height=80vh />
-<div class=lines>DTH Recharge</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Broadband-bills alt width=120vw height=80vh />
-<div class=lines>?Broadband bills</div>
-</div>
-</div>
-</div>
-<div class=card>
-<h3 class=card-head>Beauty Essentials</h3>
-<div class=cards>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?lipsticks alt width=120vw height=80vh />
-<div class=lines>Lipsticks</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?concealer alt width=120vw height=80vh />
-<div class=lines>Concealer</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Mascara alt width=120vw height=80vh />
-<div class=lines>Mascara</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Eye-Liner alt width=120vw height=80vh />
-<div class=lines>Eye Liner</div>
-</div>
-</div>
-</div>
-<div class=card>
-<h3 class=card-head>Best seller in books</h3>
-<div class=cards>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?rich-dad-poor-dad alt width=120vw height=80vh />
-<div class=lines>Rich Dad Poor Dad</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?atomic-habits alt width=120vw height=80vh />
-<div class=lines>Atomic Habits</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Sapiens alt width=120vw height=80vh />
-<div class=lines>Sapiens</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?The-alchemist alt width=120vw height=80vh />
-<div class=lines>The Alchemist</div>
-</div>
-</div>
-</div>
-<div class=card>
-<h3 class=card-head>Electronics</h3>
-<div class=cards>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?laptops alt width=120vw height=80vh />
-<div class=lines>Laptops</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Smartphones alt width=120vw height=80vh />
-<div class=lines>Smartphones</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Kindle alt width=120vw height=80vh />
-<div class=lines>Kindle</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Cameras alt width=120vw height=80vh />
-<div class=lines>Cameras</div>
-</div>
-</div>
-</div>
-<div class=card>
-<h3 class=card-head>Cookware and Dinning</h3>
-<div class=cards>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Cookware alt width=120vw height=80vh />
-<div class=lines>Cookware</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?gas-stoves alt width=120vw height=80vh />
-<div class=lines>Gas Stoves</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Kitchen-Storage alt width=120vw height=80vh />
-<div class=lines>Kitchen Storage</div>
-</div>
-<div class=card-items>
-<img src=https://source.unsplash.com/1600x500/?Tableware alt width=120vw height=80vh />
-<div class=lines>Tableware</div>
-</div>
-</div>
-</div>
-</div>
-</main>
-<footer>
-<p>Copyright &copy; All Rights Reserved</p>
-</footer>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Online Shopping site in India: Shop Online for Mobiles, Books, Watches,
+      Shoes and More - Amazon.in
+    </title>
+    <link class=edges-curve rel=icon href=img/favicon.png type=image/x-icon />
+    <link rel=stylesheet href=css/compressed/style-min.css /> <link
+    rel=stylesheet href=css/compressed/utlis-min.css />
+  </head>
+  <body>
+    <header>
+      <div class="nav1">
+        <div class="nav1left">
+          <img class=logo src=img/logo2.jpg alt />
+          <div class="address">
+            <img class=location src=img/location1.jpg alt />
+            <p class="nav1-text-style">
+              Hello <br />
+              <b>Select your address</b>
+            </p>
+          </div>
+        </div>
+        <div class="nav1center">
+          <input class="searchbar" type="text" placeholder="Search Items" />
+          <img class=searchicon src=img/search1.jpg alt />
+        </div>
+        <div class="nav1right">
+          <img class=flag src=img/flag.png alt />
+          <div class="SignIn nav1-text-style">
+            Hello, Sign in <br /><b>Accounts and Lists</b>
+          </div>
+          <p class="Returns nav1-text-style">Returns and Orders</p>
+          <img class=cart src=img/cart.jpg alt />
+        </div>
+      </div>
+      <div class="nav2">
+        <div class="nav2left">
+          <div class="nav2lefta">
+            <div class="nav2-left-style">All</div>
+            <div class="nav2-left-style">Gift Cards</div>
+            <div class="nav2-left-style">Mobiles</div>
+            <div class="nav2-left-style">Bestsellers</div>
+            <div class="nav2-left-style">Electronics</div>
+          </div>
+          <div class="nav2leftb">
+            <div class="nav2-left-style">Customer Service</div>
+            <div class="nav2-left-style">Fashion</div>
+            <div class="nav2-left-style">Prime</div>
+            <div class="nav2-left-style">Home and Kitchen</div>
+            <div class="nav2-left-style">Today's Deal</div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div>
+        <img class=main-img
+        src=https://source.unsplash.com/1600x500/?shopping-clothes alt />
+      </div>
+      <div class="card-holder">
+        <div class="card">
+          <h3 class="card-head">Revamp your home style</h3>
+          <div class="cards">
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?bed-sheets alt
+              width=120vw height=80vh />
+              <div class="lines">Bed sheets</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?curtains alt
+              width=120vw height=80vh />
+              <div class="lines">Curtains</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?lamps alt
+              width=120vw height=80vh />
+              <div class="lines">Lamps</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/Home-decors alt
+              width=120vw height=80vh />
+              <div class="lines">Home Decor</div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <h3 class="card-head">Men's Clothing</h3>
+          <div class="cards">
+            <div class="card-items">
+              <img
+                src="https://source.unsplash.com/1600x500/?men's-clothing"
+                alt
+                width="120vw"
+                height="80vh"
+              />
+              <div class="lines">Clothing</div>
+            </div>
+            <div class="card-items">
+              <img
+                src="https://source.unsplash.com/1600x500/?men's-footwear"
+                alt
+                width="120vw"
+                height="80vh"
+              />
+              <div class="lines">Footwear</div>
+            </div>
+            <div class="card-items">
+              <img
+                src="https://source.unsplash.com/1600x500/?Men's-wathches"
+                alt
+                width="120vw"
+                height="80vh"
+              />
+              <div class="lines">Wathes</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Bags-Luggages alt
+              width=120vw height=80vh />
+              <div class="lines">Bags and Luggages</div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <h3 class="card-head">Automative Essentials</h3>
+          <div class="cards">
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?washing-machines
+              alt width=120vw height=80vh />
+              <div class="lines">Washing Machines</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Dishwasher alt
+              width=120vw height=80vh />
+              <div class="lines">Dishwasher</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Vaccuum-cleaner alt
+              width=120vw height=80vh />
+              <div class="lines">Vaccuum-cleaner</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?grinders alt
+              width=120vw height=80vh />
+              <div class="lines">Grinders</div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <h3 class="card-head">Bill Payments</h3>
+          <div class="cards">
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?prepaid-recharge
+              alt width=120vw height=80vh />
+              <div class="lines">Prepaid Recharge</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Electricity-bills
+              alt width=120vw height=80vh />
+              <div class="lines">?Electricity bills</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?DTH-recharge alt
+              width=120vw height=80vh />
+              <div class="lines">DTH Recharge</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Broadband-bills alt
+              width=120vw height=80vh />
+              <div class="lines">?Broadband bills</div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <h3 class="card-head">Beauty Essentials</h3>
+          <div class="cards">
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?lipsticks alt
+              width=120vw height=80vh />
+              <div class="lines">Lipsticks</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?concealer alt
+              width=120vw height=80vh />
+              <div class="lines">Concealer</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Mascara alt
+              width=120vw height=80vh />
+              <div class="lines">Mascara</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Eye-Liner alt
+              width=120vw height=80vh />
+              <div class="lines">Eye Liner</div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <h3 class="card-head">Best seller in books</h3>
+          <div class="cards">
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?rich-dad-poor-dad
+              alt width=120vw height=80vh />
+              <div class="lines">Rich Dad Poor Dad</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?atomic-habits alt
+              width=120vw height=80vh />
+              <div class="lines">Atomic Habits</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Sapiens alt
+              width=120vw height=80vh />
+              <div class="lines">Sapiens</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?The-alchemist alt
+              width=120vw height=80vh />
+              <div class="lines">The Alchemist</div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <h3 class="card-head">Electronics</h3>
+          <div class="cards">
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?laptops alt
+              width=120vw height=80vh />
+              <div class="lines">Laptops</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Smartphones alt
+              width=120vw height=80vh />
+              <div class="lines">Smartphones</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Kindle alt
+              width=120vw height=80vh />
+              <div class="lines">Kindle</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Cameras alt
+              width=120vw height=80vh />
+              <div class="lines">Cameras</div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <h3 class="card-head">Cookware and Dinning</h3>
+          <div class="cards">
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Cookware alt
+              width=120vw height=80vh />
+              <div class="lines">Cookware</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?gas-stoves alt
+              width=120vw height=80vh />
+              <div class="lines">Gas Stoves</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Kitchen-Storage alt
+              width=120vw height=80vh />
+              <div class="lines">Kitchen Storage</div>
+            </div>
+            <div class="card-items">
+              <img src=https://source.unsplash.com/1600x500/?Tableware alt
+              width=120vw height=80vh />
+              <div class="lines">Tableware</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <p>Copyright &copy; All Rights Reserved</p>
+    </footer>
+  </body>
 </html>
